k8s/model-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: model-api
spec:
  selector:
    app: model-api
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
