k8s/model-worker-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: model-worker
spec:
  selector:
    app: model-worker
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
