k8s/argocd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress
  namespace: argocd
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS" # Ingress와 Argo CD 서버 간의 통신을 HTTPS로 설정
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - argocd.prtest.shop #argocd용
        - www.prtest.shop #웹 서버 용
      secretName: argocd-prtest-shop-tls # 두 도메인 인증서 저장될 곳
  rules:
  # --- 1. Argo CD 접속 규칙 ---
    - host: argocd.prtest.shop
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 443
    - host: n8n.koreacentral.cloudapp.azure.com
      http:
        paths:
          - path: /argocd
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 80
